--- a/application-gateway-typescript/package.json
+++ b/application-gateway-typescript/package.json
@@ -24,6 +24,7 @@
         "axios": "^1.5.0",
         "axios-cookiejar-support": "^4.0.7",
         "body-parser": "^1.20.2",
+        "bs58": "^6.0.0",
         "canonicalize": "^2.1.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
@@ -31,6 +32,7 @@
         "express": "^4.18.2",
         "fabric-ca-client": "^2.2.20",
         "fabric-network": "^2.2.19",
+        "helmet": "^8.1.0",
         "json-canonicalize": "^2.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.18.0",
