--- a/application-gateway-typescript/tsconfig.json
+++ b/application-gateway-typescript/tsconfig.json
@@ -6,6 +6,7 @@
       "module": "node16",
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
+      "rootDir": "./src",
       "outDir": "dist",
       "moduleResolution": "node16",
       "declaration": true,
