--- a/chaincode-typescript/tsconfig.json
+++ b/chaincode-typescript/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "outDir": "dist",
+        "rootDir": "./src",
+        "outDir": "./dist",
         "target": "es2017",
         "moduleResolution": "node16",
         "module": "node16",
